--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cc{
+  display:flex;
+  align-items: center;
+  gap:16px;
+}
+
+.links{
+  display:flex;
+  gap:16px
 }
 
 .profile-image {
@@ -45,4 +60,5 @@ a {
 
 ul {
   list-style-type: none;
+  padding:0px;
 }
