Finish flexbox fifth excercise

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,19 @@ body {
   justify-content: center;
 }
 
+.header{
+  font-weight: bold;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  gap: 8px;
+  padding: 8px;
 }
 
 .icon {
@@ -33,6 +41,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex:1 0 auto;
 }
 
 .close-button {
@@ -63,4 +72,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.rc{
+  gap:8px;
+}
+
+.urc{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.lrc{
+  display: flex;
+  gap:4px;
 }
