--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,13 @@
   padding: 0;
 }
 
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template-rows: 100px 60px 1fr 40px;
+  grid-template-columns: 1fr 4fr;
+  gap:4px;
 }
 
 .container div {
@@ -17,24 +22,38 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 /-1;
+  display: grid;
+  grid-template-columns: 400px 1fr;
 }
 
 .logo {
+  text-align: left;
 }
 
 .menu {
+  display: grid;
+  align-items: center;
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: 1fr;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: span 2;
+  display: grid;
+  grid-template-rows: repeat(4,1fr);
+  gap:50px;
 }
 
 .sidebar .photo {
@@ -43,6 +62,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-content: center;
 }
 
 .photo  {
@@ -53,6 +74,8 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-content: center;
 }
 
 .nav {
@@ -60,6 +83,9 @@
 }
 
 .nav ul {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  list-style: none;
 }
 
 .nav ul li {
@@ -69,6 +95,11 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  gap:15px;
 }
 
 .article p {
@@ -97,6 +128,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
 
 .footer p {
